# harold

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
harold/: config.py  main.py
harold/audio/: __init__.py  _lock.py  listener.py  ping.py  speaker.py
harold/router/: __init__.py  agent.py  models.py
harold/sessions/: __init__.py  manager.py  summarizer.py
scripts/: validate_router.py  validate_sdk.py
