[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harold"
version = "0.1.0"
description = "Voice-based Claude Code session router"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.52.0",
    "claude-agent-sdk>=0.1.44",
    "elevenlabs>=2.37.0",
    "faster-whisper>=1.2.1",
    "janus>=2.0.0",
    "numpy>=2.4.2",
    "pynput>=1.8.1",
    "python-dotenv>=1.2.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
harold = "harold.main:run"
